# s3-reference-manager

./: Dockerfile  README.md  main.py  pyproject.toml
.codspeed/: results_1770227109319.json
.github/workflows/: codspeed.yml
docs/: api-reference.md  configuration.md  examples.md  fastapi.md  getting-started.md  how-it-works.md  index.md
examples/: basic_app.py
s3gc/: __init__.py  builder.py  config.py  core.py  env.py  errors.py  exceptions.py  registry.py
s3gc/backup/: __init__.py  manager.py  restore.py
s3gc/cdc/: __init__.py  mysql.py  postgres.py
s3gc/integrations/: __init__.py  fastapi.py
s3gc/vault/: __init__.py  compressor.py  replicator.py  sqlite_vault.py
tests/: __init__.py  conftest.py  test_integration.py  test_safety.py
