[project]
name = "s3-reference-manager"
version = "0.1.0"
description = "Production-grade S3 reference manager: cleans unreferenced objects with zero false positives, immutable audit trail, and disaster recovery"
readme = "README.md"
requires-python = ">3.10"
license = {text = "LGPL-2.1-only"}
authors = [
    {name = "Akshat Kotpalliwar (alias IntegerAlex)", email = "akshatkot@gmail.com"}
]
keywords = ["s3", "reference-manager", "fastapi", "async", "cdc", "orphan-cleaner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiobotocore>=2.15.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.1.0",
    "apscheduler>=3.10.4",
    "zstandard>=0.23.0",
    "pillow>=11.0.0",
    "ulid-py>=1.1.0",
    "python-multipart>=0.0.9",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-codspeed>=4.2.0",
    "httpx>=0.28.0",
    "moto[s3]>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/IntegerAlex/s3-reference-manager"
Documentation = "https://github.com/IntegerAlex/s3-reference-manager#readme"
Repository = "https://github.com/IntegerAlex/s3-reference-manager"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["s3gc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
